refactor in controller